--- a/webapp/src/components/entry/entry.css
+++ b/webapp/src/components/entry/entry.css
@@ -1,12 +1,20 @@
 .entry {
     width: 100%;
-    height: 50px;
+    height: 60px;
     color: #575656;
     border: solid 1px #949494;
 }
 
 .entry-text {
     margin-bottom: 0rem !important;
+}
+
+.entry-text-small {
+    font-size: 14px;
+}
+
+.entry-hover-cursor:hover {
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 640px) {
