--- a/webapp/src/components/tag/tag.css
+++ b/webapp/src/components/tag/tag.css
@@ -7,6 +7,12 @@
   padding: 5px 10px 5px 10px;
 }
 
+.tag-stick {
+  background-color: rgb(0, 0, 54);
+  color: white;
+  border-color: white;
+}
+
 @media only screen and (min-width: 700px) {
   .tag-normal:hover {
     cursor: pointer;
