--- a/webapp/src/components/tag/tag.css
+++ b/webapp/src/components/tag/tag.css
@@ -1,14 +1,20 @@
 .tag {
-  border: solid 1px #a5a5a5;
   color: #505050;
   height: 70%;
   margin: auto;
   font-size: 13px;
   padding: 5px 10px 5px 10px;
+  background-color: white;
+  color: #505050;
+  border: 1px solid #c0c0c0;
+}
+
+.trending-tag {
+  border: solid 1px #a5a5a5;
 }
 
 .tag-stick {
-  background-color: rgb(0, 0, 54);
+  background-color: #f68d21;
   color: white;
   border-color: white;
 }
@@ -16,8 +22,7 @@
 @media only screen and (min-width: 700px) {
   .tag-normal:hover {
     cursor: pointer;
-    background-color: rgb(0, 0, 54);
+    background-color: #9fcf5a;
     color: white;
-    border-color: white;
   }
 }
